--- a/choice.phtml
+++ b/choice.phtml
@@ -1,3 +1,10 @@
+?>
+<?php 
+    /*
+        le code PHP de la page
+        déclaration de variables, conditions, etc etc
+    */
+?>
 <!DOCTYPE html>
 <html>
 <head>
@@ -18,18 +25,18 @@
             <form method="get" action="">
                 <div>
                     <input type="radio" id="choice-1" name="choice" value="choice-1">
-                    <label for="choice-1">Choix 1</label>
+                    <label for="choice-1">Pour aller tout droit à travers des bois de pins</label>
                 </div>
                 <div>
                     <input type="radio" id="choice-2" name="choice" value="choice-2">
-                    <label for="choice-1">Choix 2</label>
+                    <label for="choice-1">Pour emprunter la route bien aménagée sur votre droite</label>
                 </div>
                 <div>
                     <input type="radio" id="choice-3" name="choice" value="choice-3">
-                    <label for="choice-1">Choix 3</label>
+                    <label for="choice-1">Si vous optez pour le chemin de terre slalomant entre les champs</label>
                 </div>
                 <div>
-                    <input type="submit"onclick="" value="Valider le choix" />
+                    <input type="submit" value="Valider le choix" />
                 </div>
             </form>
         </div>
@@ -37,7 +44,7 @@
     <section>
         <section>
             <img src="assets/img/door.png" />
-            <h1>Description de la situation, blablabl magicien, blablabla</h1>
+            <h1>Vous vous tenez à un croisement, face à un choix crucial. Trois routes s'offrent à vous. Où déciderez-vous de vous aventurer ?</h1>
         </section>
     </section>
 </main>
