--- a/page-11.phtml
+++ b/page-11.phtml
@@ -1,8 +1,9 @@
 <?php 
-    /*
-        le code PHP de la page
-        déclaration de variables, conditions, etc etc
-    */
+if (isset($_GET["heroName"])) {
+    $heroName = $_GET["heroName"];
+} else {
+    $heroName = "Héro";
+}
 ?>
 <!DOCTYPE html>
 <html>
@@ -16,26 +17,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600;800&family=Special+Elite&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css" />
 </head>
-<body id="choice-red">
+<body id="choice-dark-blue">
 <main>
     <section>
-        <h2>Description du choix à faire</h2>
-        <div>
-            <form method="get" action="">
-                <div>
-                    <input type="radio" id="choice-1" name="choice" value="choice-1">
-                    <label for="choice-1">Continuez à forger votre destin de mage légendaire. Félicitations, vous avez atteint l'une des Fins Héroïques</label>
+        <h2>FIN</h2>
+               <div>
+                    <h2>Continuez à forger votre destin de mage légendaire.<br>
+                    Félicitations, vous avez atteint l'une des Fins Héroïques</h1>
                 </div>
-                <div>
-                    <input type="submit" value="Valider le choix" />
-                </div>
-            </form>
-        </div>
     </section>
     <section>
         <section>
-            <img src="assets/img/treasure.png" />
-            <h1>Avec vos nouvelles compétences en magie ancienne, vous parcourez le monde en aidant les gens et en combattant les forces du mal. Votre légende grandit</h1>
+            <img src="assets/img/fire-spell.png" />
+            <h1>Avec vos nouvelles compétences en magie ancienne,<br> vous parcourez le monde en aidant les gens et en combattant les forces du mal.<br>Votre légende grandit</h1>
         </section>
     </section>
 </main>
