--- a/page-10.phtml
+++ b/page-10.phtml
@@ -1,8 +1,18 @@
-<?php 
-    /*
-        le code PHP de la page
-        déclaration de variables, conditions, etc etc
-    */
+<?php
+
+    $heroName = $_GET["heroName"];
+    
+    if ($_SERVER["REQUEST_METHOD"] === "GET") {
+
+        if(isset($_GET["choice"])) {
+            $choice = $_GET["choice"];
+
+            if ($choice === "choice-1") {
+                header("Location: page-1.phtml"); // Redirige vers la page 1
+                exit();
+            }
+        }
+    }
 ?>
 <!DOCTYPE html>
 <html>
