--- a/page-12.phtml
+++ b/page-12.phtml
@@ -1,8 +1,9 @@
 <?php 
-    /*
-        le code PHP de la page
-        déclaration de variables, conditions, etc etc
-    */
+if (isset($_GET["heroName"])) {
+    $heroName = $_GET["heroName"];
+} else {
+    $heroName = "Héro";
+}
 ?>
 <!DOCTYPE html>
 <html>
@@ -16,26 +17,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600;800&family=Special+Elite&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css" />
 </head>
-<body id="choice-red">
+<body id="choice-dark-blue">
 <main>
     <section>
-        <h2>Description du choix à faire</h2>
+        <h2>FIN</h2>
         <div>
-            <form method="get" action="">
-                <div>
-                    <input type="radio" id="choice-1" name="choice" value="choice-1">
-                    <label for="choice-1">Vivez paisiblement dans le Royaume des Elfes. Félicitations, vous avez atteint l'une des Fins Enchantées</label>
-                </div>
-                <div>
-                    <input type="submit" value="Valider le choix" />
-                </div>
-            </form>
+            <h2>Vivez paisiblement dans le Royaume des Elfes.<br>
+            Félicitations, vous avez atteint l'une des Fins Enchantées</h2>
         </div>
     </section>
     <section>
         <section>
-            <img src="assets/img/treasure.png" />
-            <h1>Vous choisissez de rester un moment dans le Royaume des Elfes, où vous êtes accueilli comme un héros. Vous vivez en harmonie avec la nature</h1>
+            <img src="assets/img/potion.png" />
+            <h1>Vous choisissez de rester un moment dans le Royaume des Elfes, où vous êtes accueilli comme un héros.<br>Vous vivez en harmonie avec la nature</h1>
         </section>
     </section>
 </main>
