--- a/page-4.phtml
+++ b/page-4.phtml
@@ -1,8 +1,21 @@
 <?php 
-    /*
-        le code PHP de la page
-        déclaration de variables, conditions, etc etc
-    */
+    
+    $heroName = $_GET["heroName"];
+    
+    if ($_SERVER["REQUEST_METHOD"] === "GET") {
+
+        if(isset($_GET["choice"])) {
+            $choice = $_GET["choice"];
+
+            if ($choice === "choice-1") {
+                header("Location: page-9.phtml"); // Redirige vers la page 9
+                exit();
+            } elseif ($choice === "choice-2") {
+                header("Location: page-10.phtml"); // Redirige vers la page 10
+                exit();
+            }
+        }
+    }
 ?>
 <!DOCTYPE html>
 <html>
